feat: add link tag and link reset style

--- a/index.html
+++ b/index.html
@@ -34,9 +34,17 @@
             <h3 class="section-title-style">Vito Evans</h3>
             <ul>
               <li class="pb-8">456 Walnut Avenue, Someville, USA</li>
-              <li class="pb-8">+1 123 456 7890</li>
-              <li class="pb-8">info@hexschool.com</li>
-              <li class="pb-8">www.infohexschool.com</li>
+              <li class="pb-8">
+                <a href="tel:+11234567890">+1 123 456 7890</a>
+              </li>
+              <li class="pb-8">
+                <a href="mailto: info@hexschool.com">info@hexschool.com</a>
+              </li>
+              <li class="pb-8">
+                <a href="www.infohexschool.com" target="_blank">
+                  www.infohexschool.com
+                </a>
+              </li>
             </ul>
           </section>
           <section>
